--- a/desafios-propostos/dp010/estilo/android.css
+++ b/desafios-propostos/dp010/estilo/android.css
@@ -65,6 +65,8 @@ nav a {
     color: white;
     text-decoration: none;
     padding: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
     font-weight: bold;
     transition-duration: 0.5s;
 }
