--- a/desafios-propostos/dp010/estilo/android.css
+++ b/desafios-propostos/dp010/estilo/android.css
@@ -64,9 +64,10 @@ nav {
 nav a {
     color: white;
     text-decoration: none;
-    padding: 20px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding: 10px;
+    margin: 20px;
+    padding-left: px;
+    padding-right: px;
     font-weight: bold;
     transition-duration: 0.5s;
 }
@@ -75,7 +76,6 @@ nav a:hover {
     background-color: var(--cor1);
     color: var(--cor5);
     border-radius: 50px;
-    padding: 10px;
 }
 
 main {
