--- a/exercicios/ex016/css/style.css
+++ b/exercicios/ex016/css/style.css
@@ -31,3 +31,10 @@ h2 {
 p {
     text-align: justify;
 }
+
+.teste {
+    text-decoration: underline;
+    line-height: 2em;
+    font-weight: bold;
+    color: black;
+}
