--- a/exercicios/ex022/css/style006.css
+++ b/exercicios/ex022/css/style006.css
@@ -5,13 +5,24 @@ body {
     background-color: black;
     background-image: url(../imagens/wallpaper002.jpg);
     background-position: center center;
-    background-repeat: repeat-y;
+    background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
+
+/*  
+Shorthand - background:
+    color -> image -> position -> repeat -> size* -> attachment
+
+Exemplo: background: black, url(../imagens/wallpaper002.jpg), center center, no-repeat, cover*, fixed;
+
+* - em alguns navegadores, o size pode não funcionar ao usá-lo no shorthand.
+*/
 
 main {
     background-color: white;
-    width: 400px;
+    max-width: 450px;
+    min-width: 250px;
     padding: 10px;
     margin: auto;
     border: 2px solid darkblue;
