--- a/exercicios/ex023/css/style003.css
+++ b/exercicios/ex023/css/style003.css
@@ -5,15 +5,44 @@ body {
 }
 
 table {
-    border: 2px solid black;
-    width: 400px;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
+    border-right: 2px solid black;
     border-collapse: collapse;
-    text-align: left;
+}
+
+caption {
+    border-left: 2px solid black;
+    border-top: 2px solid black;
+    border-right: 2px solid black;
+    background-color: rgb(70, 70, 70);
+    color: white;
+    font-weight: bold;
+    font-size: 1.5em;
+    font-variant: small-caps;
+    padding: 8px;
 }
 
 thead, tfoot {
-    background-color: gray;
+    background-color: rgb(70, 70, 70);
     color: white;
+}
+
+/*tbody > tr:nth-child(even) {
+    background-color: blue;
+    even = par 
+    ou (2n)
+}
+
+tbody > tr:nth-child(odd) {
+    background-color: yellow;
+    odd = ímpar
+    ou (2n-1)
+}*/
+
+tbody > tr:nth-child(2n) {
+    background-color: lightgray;
+    /*efeito zebrado*/
 }
 
 th, td {
@@ -21,6 +50,13 @@ th, td {
     padding: 8px;
 }
 
-.num {
-    text-align: right;
+.num:hover {
+    display: inline;
+    background-color: rgb(70, 70, 70);
+    border: none;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    margin-left: 13px;
+    padding: 5px;
 }
