--- a/desafios-propostos/dp014/css/style.css
+++ b/desafios-propostos/dp014/css/style.css
@@ -1,2 +1,43 @@
 @charset "UTF-8";
 
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+}
+
+body {
+    background-image: url(../images/fundo-madeira.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+    background-attachment: fixed;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+}
+
+section.telefone {
+    position: absolute;
+    width: 260px;
+    height: 525px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: url(../images/frame-iphone-p.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 40px;
+}
+
+section.redeSociais {
+
+}
