--- a/desafios-propostos/dp014/css/style.css
+++ b/desafios-propostos/dp014/css/style.css
@@ -38,6 +38,14 @@ section.telefone {
     border-radius: 40px;
 }
 
-section.redeSociais {
+iframe#tela {
+    position: relative;
+    top: 13%;
+    left: 7%;
+    width: 224px;
+    height: 394px;
+}
 
+section.redeSociais {
+    
 }
