--- a/desafios-propostos/dp014/css/style.css
+++ b/desafios-propostos/dp014/css/style.css
@@ -6,6 +6,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+    
+}
+
 html, body {
     width: 100vw;
     height: 100vh;
