--- a/exercicios/ex025/css/style.css
+++ b/exercicios/ex025/css/style.css
@@ -28,6 +28,13 @@ form {
     line-height: 2em;
 }
 
+form fieldset {
+    margin: 0px 0px 10px 0px;
+    padding: 5px;
+    font-weight: bold;
+    font-variant: small-caps;
+}
+
 form legend {
     background-color: rgb(70, 70, 70);
     color: white;
@@ -47,7 +54,6 @@ form label {
 
 form input {
     padding: 0px 3px 0px 3px ;
-    margin: auto;
 }
 
 p.observacao {
