--- a/exercicios/ex025/css/style.css
+++ b/exercicios/ex025/css/style.css
@@ -30,9 +30,8 @@ form {
 
 form fieldset {
     margin: 0px 0px 10px 0px;
+    border-radius: 5px;
     padding: 5px;
-    font-weight: bold;
-    font-variant: small-caps;
 }
 
 form legend {
@@ -52,7 +51,7 @@ form label {
     padding: 0px 0px 0px 5px;
 }
 
-form input {
+form input, form select, form textarea {
     padding: 0px 3px 0px 3px ;
 }
 
