--- a/exercicios/ex026/mq002/css/landscape.css
+++ b/exercicios/ex026/mq002/css/landscape.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /* aparelho deitado (landscape) */
+
+body {
+    background-image: url(../images/cev-landscape.jpg);
+    background-position: bottom center;
+}
