--- a/exercicios/ex026/mq002/css/portrait.css
+++ b/exercicios/ex026/mq002/css/portrait.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /* aparelho em pé (portrait) */
+
+body {
+    background-image: url(../images/cev-portrait.jpg);
+    background-position: bottom center;
+}
