--- a/desafios-propostos/dp015/css/style.css
+++ b/desafios-propostos/dp015/css/style.css
@@ -8,3 +8,61 @@ Paleta de Cores:
     Lilás: #5f2c82
 */
 
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
+}
+
+html, body {
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+main section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+    border-radius: 20px;
+    height: 500px;
+    width: 250px;
+    overflow: hidden;
+}
+
+main section div#imagem {
+    display: block;
+    background-color: #5f2c82;
+    background-image: url(../images/image-login.jpg);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 50%;
+    width: 250px;
+}
+
+main section div#formulario {
+    display: block;
+    padding: 10px;
+}
+
+main section div#formulario h1 {
+    text-align: center;
+    font-variant: small-caps;
+    padding: 0px 0px 10px 0px;
+}
+
+main section div#formulario p {
+    text-align: justify;
+    padding: 0px 0px 10px 0px;
+}
