--- a/desafios-propostos/dp015/css/media-query.css
+++ b/desafios-propostos/dp015/css/media-query.css
@@ -2,6 +2,10 @@
 
 /* TABLET */
 @media screen and (min-width: 768px) and (max-width: 992px) {
+    body {
+        background-image: linear-gradient(180deg, #5f2c82, #49a09d);
+    }
+
     main section#login {
         width: 80vw;
     }
@@ -47,7 +51,7 @@
     body {
         background-image: linear-gradient(180deg, #5f2c82, #49a09d);
     }
-    
+
     main section#login {
         width: 90%;
     }
