--- a/desafios-propostos/dp015/css/style.css
+++ b/desafios-propostos/dp015/css/style.css
@@ -59,11 +59,14 @@ main section div#formulario {
     height: 60%;
     width: 100%;
     padding: 10px;
-    text-align: justify;
 }
 
 main section div#formulario h1 {
     text-align: center;
     font-variant: small-caps;
     padding: 0px 0px 10px 0px;
+}
+
+main section div#formulario p {
+    text-align: justify;
 }
