--- a/desafios-propostos/dp015/css/style.css
+++ b/desafios-propostos/dp015/css/style.css
@@ -35,8 +35,8 @@ main section#login {
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     border-radius: 20px;
-    height: 500px;
-    width: 250px;
+    height: 80vh;
+    width: 55vw;
     overflow: hidden;
     transition: width .3s, height .3s;
     transition-timing-function: ease;
