--- a/desafios-propostos/dp015/css/media-query.css
+++ b/desafios-propostos/dp015/css/media-query.css
@@ -2,8 +2,12 @@
 
 /* TABLET */
 @media screen and (min-width: 768px) and (max-width: 992px) {
+    body {
+        background-image: linear-gradient(90deg, #5f2c82, #49a09d);
+    }
+
     main section#login {
-        width: 65vw;
+        width: 75vw;
     }
 
     main section#login div#imagem {
@@ -22,11 +26,11 @@
 /* DESKTOP */
 @media screen and (min-width: 992px) and (max-width: 1280px) {
     body {
-        background-image: linear-gradient(180deg, #5f2c82, #49a09d);
+        background-image: linear-gradient(90deg, #5f2c82, #49a09d);
     }
 
     main section#login {
-        width: 75vw;
+        width: 80vw;
     }
 
     main section#login div#imagem {
@@ -45,7 +49,7 @@
 /* GRANDES TELAS */
 @media screen and (min-width: 1280px) {
     body {
-        background-image: linear-gradient(180deg, #5f2c82, #49a09d);
+        background-image: linear-gradient(270deg, #5f2c82, #49a09d);
     }
 
     main section#login {
