--- a/desafios-propostos/dp015/css/style.css
+++ b/desafios-propostos/dp015/css/style.css
@@ -35,8 +35,8 @@ main section#login {
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     border-radius: 20px;
-    height: 80vh;
-    width: 55vw;
+    height: 500px;
+    width: 280px;
     overflow: hidden;
     transition: width .3s, height .3s;
     transition-timing-function: ease;
@@ -69,4 +69,21 @@ main section div#formulario h1 {
 
 main section div#formulario p {
     text-align: justify;
+}
+
+main section div#formulario form .campo input {
+    padding: 0px 5px;
+}
+
+main section div#formulario form .campo label {
+    font-weight: bold;
+    font-variant: small-caps;
+}
+
+main section div#formulario form input {
+    font-variant: small-caps;
+}
+
+main section div#formulario form a {
+    color: black;
 }
