--- a/desafios-propostos/dp015/css/style.css
+++ b/desafios-propostos/dp015/css/style.css
@@ -35,14 +35,14 @@ main section#login {
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     border-radius: 20px;
-    height: 500px;
+    height: 550px;
     width: 300px;
     overflow: hidden;
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
 
-main section div#imagem {
+main div#imagem {
     display: block;
     background-color: #5f2c82;
     background-image: url(../images/image-login.jpg);
@@ -54,36 +54,91 @@ main section div#imagem {
     transition: width .3s, height .3s;
 }
 
-main section div#formulario {
+main div#formulario {
     display: block;
     height: 60%;
     width: 100%;
     padding: 10px;
 }
 
-main section div#formulario h1 {
+main div#formulario h1 {
     text-align: center;
     font-variant: small-caps;
     padding: 0px 0px 10px 0px;
 }
 
-main section div#formulario p {
+main div#formulario p {
     text-align: justify;
 }
 
-main section div#formulario form .campo input {
-    padding: 0px 5px;
+main div.campo {
+    background-color: #5f2c82;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
 }
 
-main section div#formulario form .campo label {
+main div.campo input {
+    padding: 0px 5px;
+    top: 50%;
+    transform: translate(5%, -25%);
+    width: 75%;
+}
+
+main div.campo label {
+    display: none;
     font-weight: bold;
     font-variant: small-caps;
 }
 
-main section div#formulario form input {
-    font-variant: small-caps;
+main div.campo span {
+    font-size: 2em;
+    top: 50%;
+    transform: translate(25%, 15%);
+    color: white;
 }
 
-main section div#formulario form a {
+main input#submitEntrar {
+    display: block;
+    font-size: 1.1em;
+    font-weight: bold;
+    font-variant: small-caps;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%;
+    height: 40px;
+    margin-top: 20px;
+}
+
+main input#submitEntrar:hover {
+    background-color: #2b6462;
+}
+
+main form a {
+    display: block;
     color: black;
+    background-color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 0.9em;
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #49a09d;
+    padding: 4px;
+    margin-top: 5px;
+}
+
+main form a:hover {
+    background-color: #49a09d;
+    color: white;
+}
+
+main form a span#esqueciSenha {
+    font-size: .9em;
+    vertical-align: bottom;
 }
