--- a/desafios-propostos/dp015/css/media-query.css
+++ b/desafios-propostos/dp015/css/media-query.css
@@ -10,16 +10,24 @@
         width: 75vw;
     }
 
-    main section#login div#imagem {
+    main div#imagem {
         float: left;
-        width: 45%;
+        width: 40%;
         height: 100%;
     }
 
-    main section#login div#formulario {
+    main div#formulario {
         float: right;
-        width: 55%;
+        width: 60%;
         height: 100%;
+    }
+
+    main input#submitEntrar {
+        margin-top: 60px;
+    }
+
+    main div#formulario h1 {
+        padding: 10px 0px 20px 0px;
     }
 }
 
@@ -33,16 +41,24 @@
         width: 80vw;
     }
 
-    main section#login div#imagem {
+    main div#imagem {
         float: left;
         width: 50%;
         height: 100%;
     }
 
-    main section#login div#formulario {
+    main div#formulario {
         float: right;
         width: 50%;
         height: 100%;
+    }
+
+    main input#submitEntrar {
+        margin-top: 60px;
+    }
+
+    main div#formulario h1 {
+        padding: 10px 0px 20px 0px;
     }
 }
 
@@ -56,15 +72,23 @@
         width: 85vw;
     }
 
-    main section#login div#imagem {
-        float: right;
-        width: 55%;
+    main div#imagem {
+        float: left;
+        width: 60%;
         height: 100%;
     }
 
-    main section#login div#formulario {
-        float: left;
-        width: 45%;
+    main div#formulario {
+        float: right;
+        width: 40%;
         height: 100%;
+    }
+
+    main input#submitEntrar {
+        margin-top: 60px;
+    }
+
+    main div#formulario h1 {
+        padding: 10px 0px 20px 0px;
     }
 }
