--- a/desafios-propostos/dp015/css/style.css
+++ b/desafios-propostos/dp015/css/style.css
@@ -31,7 +31,6 @@ main section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
     border-radius: 20px;
@@ -40,6 +39,7 @@ main section#login {
     overflow: hidden;
     transition: width .3s, height .3s;
     transition-timing-function: ease;
+    transform: translate(-50%,-50%);
 }
 
 main div#imagem {
@@ -49,41 +49,49 @@ main div#imagem {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 40%;
+    height: 35%;
     width: 100%;
     transition: width .3s, height .3s;
 }
 
 main div#formulario {
     display: block;
-    height: 60%;
+    height: 65%;
     width: 100%;
     padding: 10px;
 }
 
 main div#formulario h1 {
+    background-image: linear-gradient(360deg, #5f2c82, #49a09d);
+    background-clip: text;
+    color: transparent;
     text-align: center;
+    font-size: 2em;
     font-variant: small-caps;
     padding: 0px 0px 10px 0px;
 }
 
 main div#formulario p {
     text-align: justify;
+    padding: 0px 0px 10px 0px;
 }
 
 main div.campo {
     background-color: #5f2c82;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
-    margin: 5px 0px;
+    border-radius: 100px;
+    margin: 2px 0px;
 }
 
 main div.campo input {
     padding: 0px 5px;
     top: 50%;
-    transform: translate(5%, -25%);
-    width: 75%;
+    height: 30px;
+    width: 80%;
+    border-radius: 100px;
+    border: none;
+    transform: translate(5%, -20%);
 }
 
 main div.campo label {
@@ -130,7 +138,7 @@ main form a {
     border-radius: 5px;
     border: 1px solid #49a09d;
     padding: 4px;
-    margin-top: 5px;
+    margin-top: 2px;
 }
 
 main form a:hover {
